UPDATE: Atualizando os arquivos de dependências

--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -51,18 +51,24 @@ endif
 
 DEBUG =
 
-CFLAGS = -Wall $(STANDARD)
+CFLAGS = -Wall $(STANDARD) $(DEBUG)
 LFLAGS = -Wall
 
 AULA0101 = aula0101
 AULA0102 = aula0102
 AULA0103 = aula0103
+AULA0104 = aula0104
+AULA0105 = aula0105
+AULA0106 = aula0106
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
 AULA0103OBJS = aula0103.o
+AULA0104OBJS = aula0104.o
+AULA0105OBJS = aula0105.o
+AULA0106OBJS = aula0106.o
 
-EXECS = $(AULA0101) $(AULA0102) $(AULA0103)
+EXECS = $(AULA0101) $(AULA0102) $(AULA0103) $(AULA0104) $(AULA0105) $(AULA0106)
 
 LIBS =
 
@@ -73,23 +79,29 @@ ALL = $(EXECS) $(LIBS)
 
 all: $(ALL)
 
-aula01: $(AULA0101OBJS)
+aula0101: $(AULA0101OBJS)
 	$(LD) $(LFLAGS) -o $(AULA0101) $(AULA0101OBJS)
-
-aula0101: aula01
 	cp -f $(AULA0101) $(AULA0101)-$(OS)-$(CC)-$(DIALECT)
 
-aula02: $(AULA0102OBJS)
+aula0102: $(AULA0102OBJS)
 	$(LD) $(LFLAGS) -o $(AULA0102) $(AULA0102OBJS)
-
-aula0102: aula02
 	cp -f $(AULA0102) $(AULA0102)-$(OS)-$(CC)-$(DIALECT)
 
-aula03: $(AULA0103OBJS)
+aula0103: $(AULA0103OBJS)
 	$(LD) $(LFLAGS) -o $(AULA0103) $(AULA0103OBJS)
-
-aula0103: aula03
 	cp -f $(AULA0103) $(AULA0103)-$(OS)-$(CC)-$(DIALECT)
+
+aula0104: $(AULA0104OBJS)
+	$(LD) $(LFLAGS) -o $(AULA0104) $(AULA0104OBJS)
+	cp -f $(AULA0104) $(AULA0104)-$(OS)-$(CC)-$(DIALECT)
+
+aula0105: $(AULA0105OBJS)
+	$(LD) $(LFLAGS) -o $(AULA0105) $(AULA0105OBJS)
+	cp -f $(AULA0105) $(AULA0105)-$(OS)-$(CC)-$(DIALECT)
+
+aula0106: $(AULA0106OBJS)
+	$(LD) $(LFLAGS) -o $(AULA0106) $(AULA0106OBJS)
+	cp -f $(AULA0106) $(AULA0106)-$(OS)-$(CC)-$(DIALECT)
 
 .PHONY: clean-all clean clean-objs clean-bsd clean-linux clean-gcc clean-clang clean-ansi clean-c89 clean-c90 clean-c99 clean-c11
 
