--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -55,7 +55,8 @@ CFLAGS = -Wall $(STANDARD) $(DEBUG)
 LFLAGS = -Wall
 
 AULA01 = aula0101 aula0102 aula0103 aula0104 aula0105 aula0106
-AULA02 = aula0202a
+AULA02 = aula0202a aula0202b aula0202c aula0202d
+AULA03 = aula0302a
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
@@ -66,13 +67,19 @@ AULA0106OBJS = aula0106.o
 
 AULA0202AOBJS = aula0201a.o aula0202.o
 AULA0202BOBJS = aula0201b.o aula0202.o
+AULA0202COBJS = aula0201c.o aula0202.o
+AULA0202DOBJS = aula0201d.o aula0202.o
+
+AULA0302AOBJS = aula0302.o aula0301a.o
 
 LIBMATEMATICARECURSAOOBJS = aula0201a.o
 LIBMATEMATICADOWHILEOBJS = aula0201b.o
+LIBMATEMATICAFOROBJS = aula0201c.o
+LIBMATEMATICAWHILEOBJS = aula0201d.o
 
-EXECS = $(AULA01) $(AULA02)
+EXECS = $(AULA01) $(AULA02) $(AULA03)
 
-LIBS = libmatematica-recursao.a libmatematica-dowhile.a
+LIBS = libmatematica-recursao.a libmatematica-dowhile.a libmatematica-for.a libmatematica-while.a
 
 ALL = $(EXECS) $(LIBS)
 
@@ -117,11 +124,31 @@ aula0202b: $(AULA0202BOBJS)
 	$(LD) $(LFLAGS) -o $@ $(AULA0202BOBJS)
 	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
 
+aula0202c: $(AULA0202COBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0202COBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula0202d: $(AULA0202DOBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0202DOBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula03: $(AULA03)
+
+aula0302a: $(AULA0302AOBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0302AOBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
 libmatematica-recursao.a: $(LIBMATEMATICARECURSAOOBJS)
 	ar -r -c $@ $(LIBMATEMATICARECURSAOOBJS)
 
 libmatematica-dowhile.a: $(LIBMATEMATICADOWHILEOBJS)
 	ar -r -c $@ $(LIBMATEMATICADOWHILEOBJS)
+
+libmatematica-for.a: $(LIBMATEMATICAFOROBJS)
+	ar -r -c $@ $(LIBMATEMATICAFOROBJS)
+
+libmatematica-while.a: $(LIBMATEMATICAWHILEOBJS)
+	ar -r -c $@ $(LIBMATEMATICAWHILEOBJS)
 
 .PHONY: clean-all clean clean-objs clean-bsd clean-linux clean-gcc clean-clang clean-ansi clean-c89 clean-c90 clean-c99 clean-c11
 
