--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -72,7 +72,7 @@ AULA0202DOBJS = aula0201d.o aula0202.o
 
 AULA0302AOBJS = aula0302.o aula0301a.o
 
-LIBMATEMATICARECURSAOOBJS = aula0201a.o
+LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o
 LIBMATEMATICADOWHILEOBJS = aula0201b.o
 LIBMATEMATICAFOROBJS = aula0201c.o
 LIBMATEMATICAWHILEOBJS = aula0201d.o
