--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -56,7 +56,7 @@ LFLAGS = -Wall
 
 AULA01 = aula0101 aula0102 aula0103 aula0104 aula0105 aula0106
 AULA02 = aula0202a aula0202b aula0202c aula0202d
-AULA03 = aula0302a
+AULA03 = aula0302a aula0302b
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
@@ -71,6 +71,7 @@ AULA0202COBJS = aula0201c.o aula0202.o
 AULA0202DOBJS = aula0201d.o aula0202.o
 
 AULA0302AOBJS = aula0302.o aula0301a.o
+AULA0302BOBJS = aula0302.o aula0301b.o
 
 LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o
 LIBMATEMATICADOWHILEOBJS = aula0201b.o
@@ -136,6 +137,10 @@ aula03: $(AULA03)
 
 aula0302a: $(AULA0302AOBJS)
 	$(LD) $(LFLAGS) -o $@ $(AULA0302AOBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula0302b: $(AULA0302BOBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0302BOBJS)
 	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
 
 libmatematica-recursao.a: $(LIBMATEMATICARECURSAOOBJS)
