ADD: Lib de do..while de fibonacci

--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -74,7 +74,7 @@ AULA0302AOBJS = aula0302.o aula0301a.o
 AULA0302BOBJS = aula0302.o aula0301b.o
 
 LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o
-LIBMATEMATICADOWHILEOBJS = aula0201b.o
+LIBMATEMATICADOWHILEOBJS = aula0201b.o aula0301b.o
 LIBMATEMATICAFOROBJS = aula0201c.o
 LIBMATEMATICAWHILEOBJS = aula0201d.o
 
