--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -57,7 +57,7 @@ LFLAGS = -Wall
 AULA01 = aula0101 aula0102 aula0103 aula0104 aula0105 aula0106
 AULA02 = aula0202a aula0202b aula0202c aula0202d
 AULA03 = aula0302a aula0302b aula0302c aula0302d
-AULA04 = aula0402a aula0402b aula0402c aula0402d aula0404a
+AULA04 = aula0402a aula0402b aula0402c aula0402d aula0404a aula0404b
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
@@ -81,9 +81,10 @@ AULA0402BOBJS = aula0402.o aula0401b.o
 AULA0402COBJS = aula0402.o aula0401c.o
 AULA0402DOBJS = aula0402.o aula0401d.o
 AULA0404AOBJS = aula0404.o aula0403a.o
+AULA0404BOBJS = aula0404.o aula0403b.o
 
 LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o aula0401a.o aula0403a.o
-LIBMATEMATICADOWHILEOBJS = aula0201b.o aula0301b.o aula0401b.o
+LIBMATEMATICADOWHILEOBJS = aula0201b.o aula0301b.o aula0401b.o aula0403b.o
 LIBMATEMATICAFOROBJS = aula0201c.o aula0301c.o aula0401c.o
 LIBMATEMATICAWHILEOBJS = aula0201d.o aula0301d.o aula0401d.o
 
@@ -180,6 +181,10 @@ aula0402d: $(AULA0402DOBJS)
 
 aula0404a: libmatematica-recursao.a $(AULA0404AOBJS)
 	$(LD) $(LFLAGS) -o $@ $(AULA0404AOBJS) -L. -lmatematica-recursao -lm
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula0404b: libmatematica-dowhile.a $(AULA0404BOBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0404BOBJS) -L. -lmatematica-dowhile -lm
 	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
 
 libmatematica-recursao.a: $(LIBMATEMATICARECURSAOOBJS)
