--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -58,7 +58,7 @@ AULA01 = aula0101 aula0102 aula0103 aula0104 aula0105 aula0106
 AULA02 = aula0202a aula0202b aula0202c aula0202d
 AULA03 = aula0302a aula0302b aula0302c aula0302d
 AULA04 = aula0402a aula0402b aula0402c aula0402d aula0404a aula0404b aula0404c aula0404d aula0404e
-AULA05 = aula0502
+AULA05 = aula0502 aula0503
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
@@ -88,6 +88,7 @@ AULA0404DOBJS = aula0404.o aula0403d.o
 AULA0404EOBJS = aula0404.o aula0403e.o
 
 AULA0502OBJS = aula0502.o aula0501.o
+AULA0503OBJS = aula0503.o aula0501.o
 
 LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o aula0401a.o aula0403a.o
 LIBMATEMATICADOWHILEOBJS = aula0201b.o aula0301b.o aula0401b.o aula0403b.o
@@ -212,6 +213,10 @@ aula05: $(AULA05)
 
 aula0502: $(AULA0502OBJS)
 	$(LD) $(LFLAGS) -o $@ $(AULA0502OBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula0503: $(AULA0503OBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0503OBJS)
 	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
 
 libmatematica-recursao.a: $(LIBMATEMATICARECURSAOOBJS)
