--- a/Aulas-praticas/GNUmakefile
+++ b/Aulas-praticas/GNUmakefile
@@ -59,6 +59,7 @@ AULA02 = aula0202a aula0202b aula0202c aula0202d
 AULA03 = aula0302a aula0302b aula0302c aula0302d
 AULA04 = aula0402a aula0402b aula0402c aula0402d aula0404a aula0404b aula0404c aula0404d aula0404e
 AULA05 = aula0502 aula0503 aula0504 aula0505 aula0506 aula0507
+AULA06 = aula0602a
 
 AULA0101OBJS = aula0101.o
 AULA0102OBJS = aula0102.o
@@ -94,6 +95,8 @@ AULA0505OBJS = aula0505.o aula0501.o
 AULA0506OBJS = aula0506.o aula0501.o
 AULA0507OBJS = aula0507.o aula0501.o
 
+AULA0602AOBJS = aula0602a.o aula0601.o
+
 LIBMATEMATICARECURSAOOBJS = aula0201a.o aula0301a.o aula0401a.o aula0403a.o
 LIBMATEMATICADOWHILEOBJS = aula0201b.o aula0301b.o aula0401b.o aula0403b.o
 LIBMATEMATICAFOROBJS = aula0201c.o aula0301c.o aula0401c.o aula0403c.o
@@ -102,7 +105,7 @@ LIBMATEMATICAOBJS = aula0501.o
 
 LIBMATEMATICA = libmatematica.a
 
-EXECS = $(AULA01) $(AULA02) $(AULA03) $(AULA04) $(AULA05)
+EXECS = $(AULA01) $(AULA02) $(AULA03) $(AULA04) $(AULA05) $(AULA06)
 
 LIBS = libmatematica-recursao.a libmatematica-dowhile.a libmatematica-for.a libmatematica-while.a $(LIBMATEMATICA)
 
@@ -237,6 +240,12 @@ aula0506: $(AULA0506OBJS)
 
 aula0507: $(AULA0507OBJS)
 	$(LD) $(LFLAGS) -o $@ $(AULA0507OBJS)
+	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
+
+aula06: $(AULA06)
+
+aula0602a: $(AULA0602AOBJS)
+	$(LD) $(LFLAGS) -o $@ $(AULA0602AOBJS)
 	cp -f $@ $@-$(OS)-$(CC)-$(DIALECT)
 
 libmatematica-recursao.a: $(LIBMATEMATICARECURSAOOBJS)
